--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
 
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
 
-<div class="btn">
-<a href="#" class="btn-class"/>Learn more</a>
-</div>
+
+
 
       </div>
       </div>
@@ -100,7 +99,8 @@
 <div class="container">
   <div class="exp">
       <h1>Expertise</h1>
-      <p>dfbdhbvhjfdvhjdhvbdfhbvdfbv</p>
+     <p>dfbdhbvhjfdvhjdhvbdfhbvdfbv</p>
+      <div class="description"></div>
       <hr>
   </div>
 
@@ -156,16 +156,99 @@
 <div class="container">
 
   <h1>styffhffjfbffhfb</h1>
-  <p><</p>
+  <p></p>
 
 
 
 </div>
 
-
-
-
 </div>
+
+
+<div class="container">
+  <div class="works">
+     <h1>OUR WORKS</h1>
+      <p>See all project in dou....</p>
+  </div>
+</div>
+
+
+<div class="lotsfoto">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+</div>
+<div class="lotsfoto">
+
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+  <img src="images/content/team.jpg" alt="">
+</div>
+
+<div class="city"><img src="images/content/forestcont.jpg" alt=""></div>
+
+<div class="container">
+   <div class="form">
+     <h1>GIVE US A GOOD NEWS</h1>
+     <form action="#0">
+
+       <div>
+         <input type="text" id="first_name" name="first_name" required placeholder=" " />
+         <label for="first_name">Name</label>
+       </div>
+
+       <div>
+         <input type="text" id="email" name="email" required placeholder=" " />
+         <label for="email">Email</label>
+         <div class="requirements">
+           Must be a valid email address.
+         </div>
+       </div>
+
+       <div>
+         <input type="subject" id="subject" name="subject" required placeholder=" " />
+         <label for="subject">Subject</label>
+
+       </div>
+
+       <div>
+         <input type="massage"  id="massage" name="massage" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
+         <label for="massage" >Your massage</label>
+
+       </div>
+
+       <input type="submit" value="Submit" />
+
+     </form>
+
+   </div>
+
+<div class="container">
+     <div class="client">
+       <h1>OUR HAPPY CLIENT</h1>
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+       <img src="images/content/zaralogo.gif" alt="">
+
+    </div>
+</div>
+
+
+
+
 
 
 
