--- a/index.html
+++ b/index.html
@@ -7,229 +7,222 @@
 <link rel="stylesheet" href="stylesheets/screen.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
-  	<script type="text/javascript">
-  		$(document).ready(function(){
-  			var touch = $('#touch-menu');
-  		    var menu = $('.nav');
-
-  		    $(touch).on('click', function(e) {
-  		        e.preventDefault();
-  		        menu.slideToggle();
-  		    });
-  		    $(window).resize(function(){
-  		        var wid = $(window).width();
-  		        if(wid > 760 && menu.is(':hidden')) {
-  		            menu.removeAttr('style');
-  		        }
-  		    });
-  		});
-  	</script>
-
-
-
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script> -->
 </head>
 <body>
 
 <div class="header">
-
-
+  <div class="alo">
     <header class="container clearfix" >
+              <div class="logo">
+                <a href="#" class="tajam"><img src="images/header/logo.gif" alt=""><span id="text">TAJAM</span></a>
+              </div>
 
-      <div class="logo">
-        <a href="#"><img src="images/header/logo.gif" alt="">TAJAM</a>
-      </div>
-      <a href="#" id="touch-menu">
-        <input type="image" name="image" src="images/header/hug.png" width="24">
-    </a>
-      <nav>
-        <ul class="nav clearfix">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">EXPERTISE</a></li>
-          <li><a href="#">TEAMS</a></li>
-          <li><a href="#">WORKS</a></li>
-          <li><a href="#">PEOPLE SAY</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>
+              <nav>
+                <ul class="nav clearfix">
+                  <li><a href="#">HOME</a></li>
+                  <li><a href="#">ABOUT</a></li>
+                  <li><a href="#">EXPERTISE</a></li>
+                  <li><a href="#">TEAMS</a></li>
+                  <li><a href="#">WORKS</a></li>
+                  <li><a href="#">PEOPLE SAY</a></li>
+                  <li><a href="#">CONTACT</a></li>
+                </ul>
 
+              </nav>
+             <div class="text">
+                  <h2 class="header1">We Are Awesome Creative Agency</h2>
+                  <div class="description"></div>
+                  <p class="pod-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <input type="submit"class="main-b" value="LEARN MORE" />
+            </div>
+  </header>
 
-
-    </header>
-
-    <div class="image">
-    	<img src="images/header/forestr.jpg" alt="" />
-      <div class="container clearfix">
-        <h2>A Movie in the Park</h2>
-
-        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-
-
-
-
-      </div>
-      </div>
-
-</div>
-
-<div class="content-global">
-  <div class="container">
-           <div class="content">
-             <img src="images/content/main-logo.gif" alt="">
-             <h1>STORY</h1>
-             <p>  Lorem ipsum dolor sit amet, consectetur adipisicing e
-               lit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-               enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
-               ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volupta
-               te velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-               cupidatat    non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum.</p>
-
-                <div class="btn">
-                   <a href="#" class="btn-class"/>Learn more</a>
-                </div>
-           </div>
-
-    </div>
-
-<div class="city"><img src="images/content/city.jpg" alt=""></div>
-
-
-<div class="container">
-  <div class="exp">
-      <h1>Expertise</h1>
-     <p>dfbdhbvhjfdvhjdhvbdfhbvdfbv</p>
-      <div class="description"></div>
-      <hr>
   </div>
+</div>
 
-<div class="item">
-
-    <div class="it1">
-       <img class="center" src="images/content/icon1.gif" border="0" width="40" height="40" alt="" />
-          <h1>Web design</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
-
+<div class="layer2">
+    <div class="left">
+      <img src="images/content/main-logo.gif" alt="" align="left">
     </div>
-    <div class="it2">
-      <img class="center" src="images/content/icon2.gif" border="0" width="40" height="40" alt="" />
-         <h1>Web design</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+  <h1>Our story</h1>
+  <p class="caption">
+  Lorem ipsum dolor sit amet, consectetur adipisicing e
+    lit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
+    ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volupta
+    te velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+    cupidatat    non proident, sunt in culpa qui officia deserunt mollit anim id
+     est laborum.
+   <input type="submit" value="Submit" class="button"/></p>
+</div>
+
+<div class="layer3"><div class="alo"></div></div>
 
 
-    </div>
-    <div class="it3">
-      <img class="center" src="images/content/icon3.gif" border="0" width="40" height="40" alt="" />
-         <h1>Web design</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+<div class="layer4">
+  <div class="container">
+           <div class="exp">
+              <h1>Expertise</h1>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+              <div class="description"></div>
+
+          </div>
+
+  <div class="item">
+<div class="item-lineone">
+      <div class="it1">
+             <img class="center" src="images/content/icon1.gif" border="0" width="40" height="40" alt="" />
+                <h1>Web design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+      <div class="it2">
+          <img class="center" src="images/content/icon2.gif" border="0" width="40" height="40" alt="" />
+             <h1>Web design</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+      <div class="it3">
+          <img class="center" src="images/content/icon3.gif" border="0" width="40" height="40" alt="" />
+             <h1>Web design</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+</div>
+    <div class="item-linetwo">
+      <div class="it1">
+         <img class="center" src="images/content/icon4.gif" border="0" width="40" height="40" alt="" />
+            <h1>Web design</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+
+      </div>
+      <div class="it2">
+        <img class="center" src="images/content/icon5.gif" border="0" width="40" height="40" alt="" />
+           <h1>Web design</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
 
 
-    </div>
-    <div class="it1">
-       <img class="center" src="images/content/icon4.gif" border="0" width="40" height="40" alt="" />
-          <h1>Web design</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+          <div class="it3">
+            <img class="center" src="images/content/icon6.gif" border="0" width="40" height="40" alt="" />
+               <h1>Web design</h1>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
 
-    </div>
-    <div class="it2">
-      <img class="center" src="images/content/icon5.gif" border="0" width="40" height="40" alt="" />
-         <h1>Web design</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+          </div>
+       </div>
+     </div>
+  </div>
+</div>
 
 
-    </div>
-    <div class="it3">
-      <img class="center" src="images/content/icon6.gif" border="0" width="40" height="40" alt="" />
-         <h1>Web design</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+<div class="layer5">
+  <div class="alo">
+    <div class="container">
+      <div class="main-info">
+        <h1>MEET OUR AMAZING TEAM</h1>
+        <p>JNJvknfjvnkfjnk jcjvoi</p>
+        <div class="description"></div>
+      </div>
 
-    </div>
+<div class="scroll">
+
+<input type="radio" id="l0" name="raz" checked="checked"/>
+<input type="radio" id="l1" name="raz"/>
+<input type="radio" id="l2" name="raz"/>
+<input type="radio" id="l3" name="raz"/>
+<input type="radio" id="l4" name="raz"/>
+<input type="radio" id="l5" name="raz"/>
+<input type="radio" id="l6" name="raz"/>
+
+<label for="l0"></label>
+<label for="l1"></label>
+<label for="l2"></label>
+<label for="l3"></label>
+<label for="l4"></label>
+<label for="l5"></label>
+<label for="l6"></label>
+
+<div>
+<img src="images/content/main-logo.gif" alt=""/>
+<img src="images/content/main-logo.gif" alt=""/>
+<img src="images/content/main-logo.gif" alt=""/>
+<img src="images/content/main-logo.gif" alt=""/>
 </div>
 
 </div>
-
-
-
-<div class="city"><img src="images/content/forestcont.jpg" alt=""></div>
-
-<div class="container">
-
-  <h1>styffhffjfbffhfb</h1>
-  <p></p>
-
-
-
+      <div class="main-info">wi
+        <p>JNJvknfjvnkfjnk jcjvoi
+        <input type="submit" value="We are hiring" class="button"/>
+      </p>
+      </div>
+  </div>
 </div>
-
 </div>
 
 
-<div class="container">
   <div class="works">
      <h1>OUR WORKS</h1>
       <p>See all project in dou....</p>
   </div>
+
+
+  <div class="layer6"></div>
+
+
+  <div class="layer7">
+    <div class="main-info">
+      <p><input type="submit" value="Load more" class="button"/></p>
+    </div>
+  </div>
+
+<div class="layer8">
+  <div class="alo">
+      <div class="container">
+        <div class="text">
+            <p class="logo-text">&#8222;</p>
+              <p class="pod-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="pod">Lorem ipsum dolor sit</p>
+
+              <div class="pic">
+                <img src="images/content/pic.gif" alt="">
+                <img src="images/content/pic.gif" alt="">
+                <img src="images/content/pic.gif" class="big-pic" alt="">
+                <img src="images/content/pic.gif" alt="">
+                <img src="images/content/pic.gif" alt="">
+              </div>
+            </div>
+      </div>
+  </div>
 </div>
 
-
-<div class="lotsfoto">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-</div>
-<div class="lotsfoto">
-
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-  <img src="images/content/team.jpg" alt="">
-</div>
-
-<div class="city"><img src="images/content/forestcont.jpg" alt=""></div>
-
-<div class="container">
+<div class="item">
+  <div class="container">
    <div class="form">
      <h1>GIVE US A GOOD NEWS</h1>
      <form action="#0">
-
        <div>
          <input type="text" id="first_name" name="first_name" required placeholder=" " />
          <label for="first_name">Name</label>
        </div>
-
        <div>
-         <input type="text" id="email" name="email" required placeholder=" " />
-         <label for="email">Email</label>
-         <div class="requirements">
-           Must be a valid email address.
-         </div>
+           <input type="text" id="email" name="email" required placeholder=" " />
+           <label for="email">Email</label>
+           <div class="requirements">
+             Must be a valid email address.
+           </div>
        </div>
-
        <div>
-         <input type="subject" id="subject" name="subject" required placeholder=" " />
-         <label for="subject">Subject</label>
-
+           <input type="subject" id="subject" name="subject" required placeholder=" " />
+           <label for="subject">Subject</label>
        </div>
-
        <div>
-         <input type="massage"  id="massage" name="massage" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
-         <label for="massage" >Your massage</label>
-
+           <input type="massage"  id="massage" name="massage" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
+           <label for="massage" >Your massage</label>
        </div>
-
        <input type="submit" value="Submit" />
-
      </form>
-
    </div>
 
-<div class="container">
+
+
      <div class="client">
        <h1>OUR HAPPY CLIENT</h1>
        <img src="images/content/zaralogo.gif" alt="">
@@ -237,20 +230,29 @@
        <img src="images/content/zaralogo.gif" alt="">
        <img src="images/content/zaralogo.gif" alt="">
        <img src="images/content/zaralogo.gif" alt="">
-       <img src="images/content/zaralogo.gif" alt="">
-       <img src="images/content/zaralogo.gif" alt="">
-       <img src="images/content/zaralogo.gif" alt="">
-       <img src="images/content/zaralogo.gif" alt="">
-       <img src="images/content/zaralogo.gif" alt="">
-
     </div>
 </div>
 
 
-
-
-
-
+<div class="footer">
+  <div class="alo">
+    <div class="item">
+      <div class="it1">
+        <div class="logo">
+          <a href="#" class="tajam"><img src="images/header/logo.gif" alt=""><span id="text">TAJAM</span></a>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+      <div class="it2">
+           <h1>Web design</h1>
+           <h1>Web design</h1>
+      </div>
+      <div class="it3">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <!-- jQuery -->
@@ -258,4 +260,5 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
+
 </html>
