--- a/index.html
+++ b/index.html
@@ -73,37 +73,37 @@
 <div class="item-lineone">
       <div class="it1">
              <img class="center" src="images/content/icon1.gif" border="0" width="40" height="40" alt="" />
-                <h1>Web design</h1>
+                <h1>WEB DESIGH </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
       </div>
       <div class="it2">
           <img class="center" src="images/content/icon2.gif" border="0" width="40" height="40" alt="" />
-             <h1>Web design</h1>
+             <h1>IDENTITY</h1>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
       </div>
       <div class="it3">
           <img class="center" src="images/content/icon3.gif" border="0" width="40" height="40" alt="" />
-             <h1>Web design</h1>
+             <h1>MOBILE APP</h1>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
       </div>
 </div>
     <div class="item-linetwo">
       <div class="it1">
          <img class="center" src="images/content/icon4.gif" border="0" width="40" height="40" alt="" />
-            <h1>Web design</h1>
+            <h1>SEARCH ENGINE</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
 
       </div>
       <div class="it2">
         <img class="center" src="images/content/icon5.gif" border="0" width="40" height="40" alt="" />
-           <h1>Web design</h1>
+           <h1>GAME </h1>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
 
 
       </div>
           <div class="it3">
             <img class="center" src="images/content/icon6.gif" border="0" width="40" height="40" alt="" />
-               <h1>Web design</h1>
+               <h1>WITH LOVE</h1>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
 
           </div>
@@ -118,7 +118,7 @@
     <div class="container">
       <div class="main-info">
         <h1>MEET OUR AMAZING TEAM</h1>
-        <p>JNJvknfjvnkfjnk jcjvoi</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, deleniti?</p>
         <div class="description"></div>
       </div>
 
@@ -148,8 +148,8 @@
 </div>
 
 </div>
-      <div class="main-info">wi
-        <p>JNJvknfjvnkfjnk jcjvoi
+      <div class="main-info">
+        <p>Become part of our dream team
         <input type="submit" value="We are hiring" class="button"/>
       </p>
       </div>
@@ -244,10 +244,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
       </div>
       <div class="it2">
-           <h1>Web design</h1>
-           <h1>Web design</h1>
+           <h1>OUR STUDIO</h1>
+           <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, reiciendis.</P>
       </div>
       <div class="it3">
+        <h1>STAY IN TOUCH</h1>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus libero sequi quia error ducimus, delectus, repellat vero ipsam vel similique. Deleniti quisquam optio commodi aliquam voluptate, laudantium officia facilis amet.</p>
       </div>
     </div>
